yamls/uptime-kuma/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: uptime-kuma
  labels:
    app: uptime-kuma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uptime-kuma
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      containers:
        - name: uptime-kuma
          image: ghcr.io/louislam/uptime-kuma:2.5.0
          ports:
            - name: http
              containerPort: 3001
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /robots.txt
              port: 3001
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 3001
            timeoutSeconds: 1
          volumeMounts:
            - name: uptime-kuma-pv
              mountPath: "/app/data"
      volumes:
        - name: uptime-kuma-pv
          persistentVolumeClaim:
            claimName: uptime-kuma-claim
